--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,4 +1,4 @@
-<section id="about" class="module-small module-parallax module-full-height my-bg-dark" data-background="assets/images/about-bg.jpg">
+<section id="about" class="module-small module-parallax module-full-height my-bg-dark" data-background="assets/images/about_bg.jpg">
 <div class="container">
 <div class="row row-centered">
   <div class="col-md-2 col-centered">
