--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,15 +7,15 @@
   <div class="about-item">
   <h4 class="about-text">
     My journey of photography began when my dad bought me my first <a  class="gallery" href="assets/images/about/camera.jpg"> camera.</a>
-    I love photography and believe its more about the perspective to look at things in a new beautiful ways than gear and techniques.
+    I love photography and believe it's more about the perspective to look at things in a new beautiful way than gear and techniques.
     </br>
     </br>
     Currently I am pursuing my master's in Computer Science at <a href="http://cse.unl.edu">University of Nebraska, Lincoln</a>.
-    My specialization is Bioinformatics using advanced database techniques
+    My specialization is Bioinformatics using advanced database techniques.
   </br>
   </br>
-    If you are a <a href="http://friendstvshow.net">F.R.I.E.N.D.S</a> person, then you pretty much know the type of person I am.
-    <a href="https://www.instagram.com/jenniferjaniston">Jennifer Anniston</a> has been my role model. Apart from this,
+    To be noted: If you are a <a href="http://friendstvshow.net">F.R.I.E.N.D.S</a> person, then you pretty much know the type of person I am.
+    <a href="https://www.instagram.com/jenniferjaniston">Jennifer Anniston</a> a.k.a Rachel Green has been my role model. Apart from this,
     I love to travel, enjoy the nature, sleep and ofcourse photography.
   </br>
   </br>
