--- a/_includes/about.html
+++ b/_includes/about.html
@@ -10,8 +10,8 @@
     I love photography and believe it's more about the perspective to look at things in a new beautiful way than gear and techniques.
     </br>
     </br>
-    Currently I am pursuing my master's in Computer Science at <a href="http://cse.unl.edu">University of Nebraska, Lincoln</a>.
-    My specialization is Bioinformatics using advanced database techniques.
+    Currently I am pursuing my Master's Degree in Computer Science at <a href="http://cse.unl.edu">University of Nebraska, Lincoln</a> where
+    my research is oriented in Computational Biology. (Hint: Mutations.. with some coding. Sounds interesting, ain't it!)
   </br>
   </br>
     To be noted: If you are a <a href="http://friendstvshow.net">F.R.I.E.N.D.S</a> person, then you pretty much know the type of person I am.
