--- a/_includes/about.html
+++ b/_includes/about.html
@@ -11,12 +11,12 @@
     </br>
     </br>
     Currently I am pursuing my Master's Degree in Computer Science at <a href="http://cse.unl.edu">University of Nebraska, Lincoln</a> where
-    my research is oriented in Computational Biology. (Hint: Mutations.. with some coding. Sounds interesting, ain't it!) <br>
+    my research is oriented in Computational Biology.<br>(Hint: Mutations.. with some coding. Sounds interesting, ain't it!) <br>
     Specialization: Informatics & Database Systems.
   </br>
   </br>
     Note that if you are a <a href="http://friendstvshow.net">F.R.I.E.N.D.S</a> person, then you pretty much know the type of person I am.
-    <a href="https://www.instagram.com/LisaKudrow/">Lisa Kudrow</a> a.k.a Phoebe Buffay is my favorite. Apart from this,
+    <br><a href="https://www.instagram.com/LisaKudrow/">Lisa Kudrow</a> a.k.a Phoebe Buffay is my favorite. Apart from this,
     I love to travel, enjoy the nature, sleep and ofcourse photography.
   </br>
   </br>
