--- a/_includes/about.html
+++ b/_includes/about.html
@@ -10,7 +10,7 @@
     I love photography and believe it's more about the perspective to look at things in a new beautiful way than gear and techniques.
     </br>
     </br>
-    Currently I am pursuing my Master's Degree in Computer Science at <a href="http://cse.unl.edu">University of Nebraska, Lincoln</a> where
+    I graduated with a Master's Degree in Computer Science at <a href="http://cse.unl.edu">University of Nebraska, Lincoln</a> where
     my research is oriented in Computational Biology.</br>(Hint: Mutations.. with some coding. Sounds interesting, ain't it!) </br>
     Specialization: Informatics and Database Systems.
   </br>
