--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,8 +39,8 @@
 					</div>
 					<div class="col-sm-12">
 						<ul class="social-text-links font-alt text-center m-b-20">
-							<li><a href="#">Facebook</a></li>
-							<li><a href="#">Google plus</a></li>
+							<li><a href="https://www.facebook.com/jRamanans">Facebook</a></li>
+							<li><a href="https://plus.google.com/u/0/+jyotsnaramanan">Google plus</a></li>
 							<li><a href="https://www.linkedin.com/in/jyotsnaramanan">Linkedin</a></li>
 						</ul>
 
@@ -52,7 +52,7 @@
 
 					<div class="col-sm-12">
 
-						<p class="copyright text-center m-b-0">© 2016 <a href="#">Jyotsna Ramanan</a></p>
+						<p class="copyright text-center m-b-0">© 2016-2017 <a href="#">Jyotsna Ramanan</a></p>
 
 					</div>
 
