Add instagram to the footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -41,6 +41,7 @@
 						<ul class="social-text-links font-alt text-center m-b-20">
 							<li><a href="https://www.facebook.com/jRamanans">Facebook</a></li>
 							<li><a href="https://plus.google.com/u/0/+jyotsnaramanan">Google plus</a></li>
+							<li><a href="https://www.instagram.com/jramanan__">Instagram</a></li>
 							<li><a href="https://www.linkedin.com/in/jyotsnaramanan">Linkedin</a></li>
 						</ul>
 
